// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "./FlagVal.proto";
import "./SequenceType.proto";

package cop1.protobuf;

message ClcwSegmentMask {
extensions 16 to 116;

  optional ccsds_mal.protobuf.BOOLEAN sequence_flag = 1;
  optional cop1.protobuf.SequenceType sequence_type = 2;
  optional cop1.protobuf.FlagVal map = 3;
  optional cop1.protobuf.FlagVal word_type = 4;
  optional cop1.protobuf.FlagVal vc_id = 5;
  optional cop1.protobuf.FlagVal farm_B_counter = 6;
  optional cop1.protobuf.FlagVal rF_flag = 7;
  optional cop1.protobuf.FlagVal synchro_flag = 8;
  optional cop1.protobuf.FlagVal close_flag = 9;
  optional cop1.protobuf.FlagVal wait_flag = 10;
  optional cop1.protobuf.FlagVal retransmit_flag = 11;
  optional cop1.protobuf.FlagVal report = 12;
  optional cop1.protobuf.FlagVal version_name = 13;
  optional cop1.protobuf.FlagVal state = 14;
  optional cop1.protobuf.FlagVal cop = 15;
}
