// Produced by Acceleo JavaScript Generator 1.1.2
package cop1.protobuf;

enum ModeType {
  AD = 1;
  BD = 2;
}
